<resources>
    <string name="app_name">Exercise 1</string>
    <string name="newtask_savetask">Save task</string>
    <string name="tvNewTaskImportanceMessage">Enter task importance:</string>
    <string name="etNewTaskImportanceHint">1</string>
    <string name="etNewTaskSummaryHint">Do OSC homework, all of the exercises</string>
    <string name="tvNewTaskSummaryMessage">Enter task summary:</string>
    <string name="etNewTaskTitleHint">Finish homework</string>
    <string name="tvNewTaskTitleMessage">Enter task title:</string>
    <string name="tvShowTasksNoTasksText">No tasks to show</string>
</resources>
